Fix T56121 and maybe others: DST.gpu_context was being created in the wrong DST.gl_context.

In addition to the crash in the selection of bones, this was responsible for other problems such as wrong hair and disappearing objects.